--- a/isteven-multi-select.css
+++ b/isteven-multi-select.css
@@ -35,6 +35,7 @@
 .multiSelect > button {
     display: inline-block;
     position: absolute;
+    float: left;
     text-align: center;    
     cursor: pointer;
     border: 1px solid #c6c6c6;    
